[project]
name = "flash-attention"
version = "0.1.0"
description = "Video editing pipeline: loudness normalization, audio sync, and silence/static removal"
requires-python = ">=3.13"
dependencies = [
    "librosa>=0.11.0",
    "moviepy>=2.2.1",
    "numpy>=2.4.4",
    "pillow>=11.3.0",
    "pyloudnorm>=0.2.0",
    "scipy>=1.17.1",
    "soundfile>=0.13.1",
]
